--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,240 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.body {
+  width: 100%;
+  min-height: 100%;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
+.header {
+  width: 100%;
+  height: 400px;
   display: flex;
   justify-content: center;
+}
+.header .image {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.articleBox {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
   align-items: center;
-  flex-grow: 1;
+  flex-direction: column;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.article {
+  width: 900px;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.article h1 {
+  margin-top: 0;
+  font-size: 2rem;
+}
+.article p {
+  margin-bottom: 0;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.section {
+  width: 100%;
+  height: 500px;
+  padding: 0 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(60, 60, 60);
 }
 
-.title {
+.imageBox {
+  display: flex;
+}
+.imageBox .image {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  opacity: 0.5;
+}
+.imageBox .image:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+.imageItem {
+  position: relative;
+}
+
+.imageTitle {
+  padding: 0;
   margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-weight: bold;
+  font-size: 2rem;
 }
 
-.title,
-.description {
+.access {
+  padding: 3rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.access h1 {
+  margin: 0;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+}
+.access p {
+  margin: 0;
+}
+.access > .main {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+.access .address {
+  margin-left: 5rem;
+}
+.access .address p {
+  margin: 1rem 0;
+}
+.access .addressItem {
+  border-bottom: 1px solid black;
+  display: flex;
+  align-items: center;
+}
+.access .addressTitle {
+  width: 100px;
+  margin-right: 1rem;
+  font-weight: bold;
+}
+
+.contact {
+  border-top: 1px solid black;
+  background-color: white;
+  width: 100%;
+  padding: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contactMain {
+  background-color: white;
+  border-radius: 10px;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.contactTitle {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.contactTitle h1,
+.contactTitle p {
+  margin: 0;
+}
+
+.form {
+  padding: 1rem;
+  width: 550px;
+}
+
+.contactItem {
+  margin-bottom: 2rem;
+  display: flex;
+}
+
+.label {
+  border-left: 3px solid black;
+  padding-left: 1rem;
+  margin-right: 2rem;
+  width: 150px;
+  display: flex;
+  align-items: center;
+}
+
+.input {
+  width: 300px;
+  border: 1px solid black;
+}
+
+.input[type=text],
+.input[type=email] {
+  font-size: 15px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.textarea {
+  font-size: 15px;
+  padding: 10px;
+  border-radius: 5px;
+  height: 150px;
+}
+
+.buttonArea {
   text-align: center;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
+.button[type=submit] {
+  background-color: red;
+  color: white;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: bold;
+  border: none;
   border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  margin: 0 5px;
+  box-shadow: 1px 1px 3px black;
+  cursor: pointer;
+}
+.button[type=submit]:hover {
+  opacity: 0.6;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+.button[type=reset] {
+  background-color: gray;
+  color: white;
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  margin: 0 5px;
+  box-shadow: 1px 1px 3px black;
+  cursor: pointer;
+}
+.button[type=reset]:hover {
+  opacity: 0.6;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+@media screen and (max-width: 950px) {
+  .article {
+    width: 600px;
+  }
 }
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
+@media screen and (max-width: 650px) {
+  .article {
     width: 100%;
-    flex-direction: column;
   }
 }
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
-}
+/*# sourceMappingURL=Home.module.css.map */
