--- a/styles/all-menu.module.css
+++ b/styles/all-menu.module.css
@@ -1,23 +1,501 @@
 .body {
   width: 100%;
-  height: 100%;
-  padding: 1rem;
+  min-height: 100vh;
+  display: grid;
+  grid-template: "head" 80px "barrel" "bottle" "cocktail"/1fr;
 }
-
-.border {
-  border: 5px solid red;
+.body .pageTitle {
+  grid-area: head;
   width: 100%;
   display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(187, 187, 187);
+}
+.body .pageTitle h1 {
+  margin: 0;
+}
+.body .barrel {
+  grid-area: barrel;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.body .barrel .titleSection {
+  border: 5px solid black;
+  background-color: black;
+  color: white;
+  padding: 1rem;
+  width: 100%;
+}
+.body .barrel .titleSection h1 {
+  margin: 0;
+}
+.body .barrel .menuSection {
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
   flex-wrap: wrap;
 }
-
-.box {
-  border: 3px solid black;
-  padding: 1rem;
+.body .barrel .menuSection .menuItem {
+  border: 5px solid black;
+  box-sizing: content-box;
+  border-radius: 5px;
+  width: calc(33% - 4rem);
+  height: 500px;
   margin: 1rem;
+  display: grid;
+  grid-template: "about" 200px "image" 200px "button" 100px;
+}
+.body .barrel .menuSection .menuItem .aboutBox {
+  grid-area: about;
+  width: 100%;
+  border-bottom: 1px solid black;
+}
+.body .barrel .menuSection .menuItem .aboutBox .title {
+  width: 100%;
+  height: 60px;
+  font-size: 18px;
+  padding: 0.3rem;
+  font-weight: bold;
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .barrel .menuSection .menuItem .aboutBox .price {
+  width: 100%;
+  height: 30px;
+  font-size: 15px;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .barrel .menuSection .menuItem .aboutBox .product {
+  height: 110px;
+  font-size: 15px;
+  margin: 0;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .barrel .menuSection .menuItem .imageBox {
+  grid-area: image;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .barrel .menuSection .menuItem .imageBox .image {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.body .barrel .menuSection .menuItem .buttonBox {
+  grid-area: button;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .barrel .menuSection .menuItem .buttonBox a {
+  padding: 1rem 2rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 0.5rem;
+}
+.body .barrel .menuSection .menuItem .buttonBox a:hover {
+  color: white;
+  background-color: black;
+}
+.body .bottle {
+  grid-area: bottle;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  height: 350px;
-  width: calc(33% - 2rem);
+}
+.body .bottle .titleSection {
+  border: 5px solid black;
+  background-color: black;
+  color: white;
+  padding: 1rem;
+  width: 100%;
+}
+.body .bottle .titleSection h1 {
+  margin: 0;
+}
+.body .bottle .menuSection {
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.body .bottle .menuSection .menuItem {
+  border: 5px solid black;
+  box-sizing: content-box;
+  border-radius: 5px;
+  width: calc(33% - 4rem);
+  height: 500px;
+  margin: 1rem;
+  display: grid;
+  grid-template: "about" 200px "image" 200px "button" 100px;
+}
+.body .bottle .menuSection .menuItem .aboutBox {
+  grid-area: about;
+  width: 100%;
+  border-bottom: 1px solid black;
+}
+.body .bottle .menuSection .menuItem .aboutBox .title {
+  width: 100%;
+  height: 70px;
+  font-size: 18px;
+  padding: 0.3rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .bottle .menuSection .menuItem .aboutBox .price {
+  width: 100%;
+  height: 30px;
+  font-size: 15px;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .bottle .menuSection .menuItem .aboutBox .product {
+  width: 100%;
+  height: 75px;
+  font-size: 15px;
+  margin: 0;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
+.body .bottle .menuSection .menuItem .imageBox {
+  grid-area: image;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .bottle .menuSection .menuItem .imageBox .image {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.body .bottle .menuSection .menuItem .buttonBox {
+  grid-area: button;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .bottle .menuSection .menuItem .buttonBox a {
+  padding: 1rem 2rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 0.5rem;
+}
+.body .bottle .menuSection .menuItem .buttonBox a:hover {
+  color: white;
+  background-color: black;
+}
+.body .cocktail {
+  grid-area: cocktail;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.body .cocktail .titleSection {
+  border: 5px solid black;
+  background-color: black;
+  color: white;
+  padding: 1rem;
+  width: 100%;
+}
+.body .cocktail .titleSection h1 {
+  margin: 0;
+}
+.body .cocktail .menuSection {
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.body .cocktail .menuSection .menuItem {
+  border: 5px solid black;
+  box-sizing: content-box;
+  border-radius: 5px;
+  width: calc(33% - 4rem);
+  height: 500px;
+  margin: 1rem;
+  display: grid;
+  grid-template: "about" 200px "image" 200px "button" 100px;
+}
+.body .cocktail .menuSection .menuItem .aboutBox {
+  grid-area: about;
+  width: 100%;
+  border-bottom: 1px solid black;
+}
+.body .cocktail .menuSection .menuItem .aboutBox .title {
+  width: 100%;
+  height: 70px;
+  font-size: 18px;
+  padding: 0.3rem;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .cocktail .menuSection .menuItem .aboutBox .price {
+  width: 100%;
+  height: 30px;
+  font-size: 15px;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .cocktail .menuSection .menuItem .aboutBox .product {
+  width: 100%;
+  height: 75px;
+  font-size: 15px;
+  margin: 0;
+  padding: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+}
+.body .cocktail .menuSection .menuItem .imageBox {
+  grid-area: image;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .cocktail .menuSection .menuItem .imageBox .image {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.body .cocktail .menuSection .menuItem .buttonBox {
+  grid-area: button;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.body .cocktail .menuSection .menuItem .buttonBox a {
+  padding: 1rem 2rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 0.5rem;
+}
+.body .cocktail .menuSection .menuItem .buttonBox a:hover {
+  color: white;
+  background-color: black;
+}
+
+@media screen and (min-width: 1170px) and (max-width: 1280px) {
+  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
+.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
+.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
+    font-size: 16px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
+    font-size: 13px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 1170px) {
+  .body .barrel .menuSection .menuItem,
+.body .bottle .menuSection .menuItem,
+.body .cocktail .menuSection .menuItem {
+    width: calc(50% - 4rem);
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
+.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
+.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
+    font-size: 18px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
+    font-size: 15px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 900px) {
+  .body .barrel .menuSection .menuItem,
+.body .bottle .menuSection .menuItem,
+.body .cocktail .menuSection .menuItem {
+    width: calc(50% - 4rem);
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
+.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
+.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
+    font-size: 16px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
+    font-size: 13px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 830px) {
+  .body .barrel .menuSection .menuItem,
+.body .bottle .menuSection .menuItem,
+.body .cocktail .menuSection .menuItem {
+    width: calc(50% - 4rem);
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
+.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
+.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
+    font-size: 15px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
+    font-size: 12px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .body .barrel .menuSection .menuItem,
+.body .bottle .menuSection .menuItem,
+.body .cocktail .menuSection .menuItem {
+    width: 500px;
+    height: 400px;
+    display: grid;
+    grid-template: "about" 150px "image" 200px "button" 50px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox,
+.body .bottle .menuSection .menuItem .aboutBox,
+.body .cocktail .menuSection .menuItem .aboutBox {
+    background-color: white;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
+.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
+.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
+    font-size: 18px;
+    height: 40px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
+    font-size: 14px;
+    height: 20px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
+    font-size: 14px;
+    height: 90px;
+  }
+  .body .barrel .menuSection .menuItem .buttonBox a,
+.body .bottle .menuSection .menuItem .buttonBox a,
+.body .cocktail .menuSection .menuItem .buttonBox a {
+    padding: 0.5rem 1rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .body .barrel .menuSection .menuItem,
+.body .bottle .menuSection .menuItem,
+.body .cocktail .menuSection .menuItem {
+    width: 400px;
+    height: 450px;
+    display: grid;
+    grid-template: "about" 170px "image" 200px "button" 80px;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
+.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
+.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
+    font-size: 20px;
+    height: 60px;
+    border: none;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
+    font-size: 14px;
+    height: 20px;
+    border: none;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
+    font-size: 14px;
+    height: 90px;
+    border: none;
+  }
+  .body .barrel .menuSection .menuItem .imageBox,
+.body .bottle .menuSection .menuItem .imageBox,
+.body .cocktail .menuSection .menuItem .imageBox {
+    border: none;
+  }
+  .body .barrel .menuSection .menuItem .buttonBox a,
+.body .bottle .menuSection .menuItem .buttonBox a,
+.body .cocktail .menuSection .menuItem .buttonBox a {
+    padding: 0.5rem 1rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .body .barrel .menuSection .menuItem,
+.body .bottle .menuSection .menuItem,
+.body .cocktail .menuSection .menuItem {
+    width: calc(100% - 4rem);
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .titleBox .title,
+.body .bottle .menuSection .menuItem .aboutBox .titleBox .title,
+.body .cocktail .menuSection .menuItem .aboutBox .titleBox .title {
+    font-size: 15px;
+    height: 40px;
+    border: none;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .price,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .price {
+    font-size: 12px;
+    height: 20px;
+    border: none;
+  }
+  .body .barrel .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .bottle .menuSection .menuItem .aboutBox .sentenceBox .product,
+.body .cocktail .menuSection .menuItem .aboutBox .sentenceBox .product {
+    font-size: 11px;
+    height: 90px;
+    border: none;
+  }
 }
 /*# sourceMappingURL=all-menu.module.css.map */
