--- a/styles/all-menu.module.scss
+++ b/styles/all-menu.module.scss
@@ -1,111 +1,745 @@
 .body {
-  // border: 5px solid blue;
+  // border: 5px solid red;
   width: 100%;
   min-height: 100vh;
-  padding: 1rem;
-}
+  display: grid;
+  grid-template:
+    "head" 80px
+    "barrel"
+    "bottle"
+    "cocktail"
+    / 1fr;
 
-.section {
-  // border: 3px solid red;
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: start;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-
-.border {
-  // border: 3px solid black;
-  width: 100%;
-  display: flex;
-  // justify-content: center;
-  flex-wrap: wrap;
-  border-radius: 10px;
-}
-
-.box {
-  border: 2px solid black;
-  border-radius: 10px;
-  padding: 1rem;
-  margin: 1rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 450px;
-  width: calc(33% - 2rem);
-  // width: 33%;
-}
-
-.about {
-  // border: 3px solid blue;
-  display: flex;
-  justify-content: center;
-  align-items: start;
-  flex-direction: column;
-  font-weight: bold;
-
-  .aboutTitle {
-    font-size: 1.3rem;
+  .pageTitle {
+    grid-area: head;
+    // border: 5px solid blue;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(187, 187, 187);
+    h1 {
+      margin: 0;
+    }
   }
 
-  .productTitle {
-    font-size: 0.8rem;
+  // 🍺🍺🍺🍺🍺🍺🍺🍺🍺🍺🍺🍺🍺🍺(1)
+
+  .barrel {
+    grid-area: barrel;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .titleSection {
+      border: 5px solid black;
+      background-color: black;
+      color: white;
+      padding: 1rem;
+      width: 100%;
+      h1 {
+        margin: 0;
+      }
+    }
+
+    .menuSection {
+      width: 100%;
+      height: 100%;
+      padding: 1rem;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+
+      .menuItem {
+        border: 5px solid black;
+        box-sizing: content-box;
+        border-radius: 5px;
+        width: calc(33% - 4rem);
+        height: 500px;
+        margin: 1rem;
+
+        display: grid;
+        grid-template:
+          "about" 200px
+          "image" 200px
+          "button" 100px;
+
+        .aboutBox {
+          grid-area: about;
+          width: 100%;
+          border-bottom: 1px solid black;
+          // background-color: pink;
+
+          .title {
+            width: 100%;
+            height: 60px;
+            //⭐️⭐️⭐️
+            font-size: 18px;
+            padding: 0.3rem;
+            font-weight: bold;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+
+          .price {
+            width: 100%;
+            height: 30px;
+            //⭐️⭐️⭐️
+            font-size: 15px;
+            padding: 0.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+
+          .product {
+            height: 110px;
+            //⭐️⭐️⭐️
+            font-size: 15px;
+            margin: 0;
+            padding: 0.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+        }
+
+        .imageBox {
+          grid-area: image;
+          // border: 2px dashed black;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          .image {
+            object-fit: contain;
+          }
+        }
+
+        .buttonBox {
+          grid-area: button;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          a {
+            padding: 1rem 2rem;
+            border: 1px solid black;
+            border-radius: 5px;
+            margin: 0.5rem;
+
+            &:hover {
+              color: white;
+              background-color: black;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  // 🍻🍻🍻🍻🍻🍻🍻🍻🍻🍻🍻(2)
+
+  .bottle {
+    grid-area: bottle;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .titleSection {
+      border: 5px solid black;
+      background-color: black;
+      color: white;
+      padding: 1rem;
+      width: 100%;
+      h1 {
+        margin: 0;
+      }
+    }
+
+    .menuSection {
+      width: 100%;
+      height: 100%;
+      padding: 1rem;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+
+      .menuItem {
+        border: 5px solid black;
+        box-sizing: content-box;
+        border-radius: 5px;
+        width: calc(33% - 4rem);
+        height: 500px;
+        margin: 1rem;
+
+        display: grid;
+        grid-template:
+          "about" 200px
+          "image" 200px
+          "button" 100px;
+
+        .aboutBox {
+          grid-area: about;
+          width: 100%;
+          border-bottom: 1px solid black;
+
+          .title {
+            width: 100%;
+            height: 70px;
+            //⭐️⭐️⭐️
+            font-size: 18px;
+            padding: 0.3rem;
+            font-weight: bold;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+
+          .price {
+            width: 100%;
+            height: 30px;
+            //⭐️⭐️⭐️
+            font-size: 15px;
+            padding: 0.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+
+          .product {
+            width: 100%;
+            height: 75px;
+            //⭐️⭐️⭐️
+            font-size: 15px;
+            margin: 0;
+            padding: 0.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100px;
+          }
+        }
+
+        .imageBox {
+          grid-area: image;
+          // border: 2px dashed black;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          .image {
+            object-fit: contain;
+          }
+        }
+
+        .buttonBox {
+          grid-area: button;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          a {
+            padding: 1rem 2rem;
+            border: 1px solid black;
+            border-radius: 5px;
+            margin: 0.5rem;
+
+            &:hover {
+              color: white;
+              background-color: black;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  // 🍷🍷🍷🍷🍷🍷🍷🍷🍷🍷🍷(3)
+
+  .cocktail {
+    grid-area: cocktail;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .titleSection {
+      border: 5px solid black;
+      background-color: black;
+      color: white;
+      padding: 1rem;
+      width: 100%;
+      h1 {
+        margin: 0;
+      }
+    }
+
+    .menuSection {
+      width: 100%;
+      height: 100%;
+      padding: 1rem;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+
+      .menuItem {
+        border: 5px solid black;
+        box-sizing: content-box;
+        border-radius: 5px;
+        width: calc(33% - 4rem);
+        height: 500px;
+        margin: 1rem;
+
+        display: grid;
+        grid-template:
+          "about" 200px
+          "image" 200px
+          "button" 100px;
+
+        .aboutBox {
+          grid-area: about;
+          width: 100%;
+          border-bottom: 1px solid black;
+
+          .title {
+            width: 100%;
+            height: 70px;
+            //⭐️⭐️⭐️
+            font-size: 18px;
+            padding: 0.3rem;
+            font-weight: bold;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+
+          .price {
+            width: 100%;
+            height: 30px;
+            //⭐️⭐️⭐️
+            font-size: 15px;
+            padding: 0.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+          }
+
+          .product {
+            width: 100%;
+            height: 75px;
+            //⭐️⭐️⭐️
+            font-size: 15px;
+            margin: 0;
+            padding: 0.5rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100px;
+          }
+        }
+
+        .imageBox {
+          grid-area: image;
+          // border: 2px dashed black;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          .image {
+            object-fit: contain;
+          }
+        }
+
+        .buttonBox {
+          grid-area: button;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          a {
+            padding: 1rem 2rem;
+            border: 1px solid black;
+            border-radius: 5px;
+            margin: 0.5rem;
+
+            &:hover {
+              color: white;
+              background-color: black;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
-.a {
-  margin-top: 1rem;
-  padding: 0.5rem 1rem;
-  text-align: center;
-  width: 100px;
-  border: 1px solid black;
+//🔥レスポンシブデザイン🔥
 
-  &:hover {
-    opacity: 0.7;
-    background-color: black;
-    color: white;
+@media screen and (min-width: 1170px) and (max-width: 1280px) {
+  .body {
+    .barrel,
+    .bottle,
+    .cocktail {
+      .menuSection {
+        .menuItem {
+          .aboutBox {
+            // background-color: skyblue;
+            .titleBox {
+              .title {
+                font-size: 16px;
+              }
+            }
+
+            .sentenceBox {
+              .price {
+                font-size: 13px;
+              }
+
+              .product {
+                font-size: 13px;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
 
-.image {
-  object-fit: contain;
+// 🟦🟦🟦🟦🟦🟦
+@media screen and (max-width: 1170px) {
+  // @media screen and (max-width: 1024px) {
+  .body {
+    .barrel,
+    .bottle,
+    .cocktail {
+      .menuSection {
+        .menuItem {
+          width: calc(50% - 4rem);
+
+          .aboutBox {
+            // background-color: mediumseagreen;
+            .titleBox {
+              .title {
+                font-size: 18px;
+                // font-size: 20px;
+              }
+            }
+
+            .sentenceBox {
+              .price {
+                font-size: 15px;
+                // font-size: 17px;
+              }
+
+              .product {
+                font-size: 15px;
+                // font-size: 17px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
-// .body {
-//   border: 5px solid blue;
-//   width: 100%;
-//   height: 100%;
-//   padding: 1rem;
+//900px
+@media screen and (max-width: 900px) {
+  // @media screen and (max-width: 1024px) {
+  .body {
+    .barrel,
+    .bottle,
+    .cocktail {
+      .menuSection {
+        .menuItem {
+          width: calc(50% - 4rem);
+
+          .aboutBox {
+            // background-color: orange;
+            .titleBox {
+              .title {
+                font-size: 16px;
+                // font-size: 20px;
+              }
+            }
+
+            .sentenceBox {
+              .price {
+                font-size: 13px;
+                // font-size: 17px;
+              }
+
+              .product {
+                font-size: 13px;
+                // font-size: 17px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// 830px
+@media screen and (max-width: 830px) {
+  // @media screen and (max-width: 1024px) {
+  .body {
+    .barrel,
+    .bottle,
+    .cocktail {
+      .menuSection {
+        .menuItem {
+          width: calc(50% - 4rem);
+
+          .aboutBox {
+            // background-color: orange;
+            .titleBox {
+              .title {
+                font-size: 15px;
+                // font-size: 20px;
+              }
+            }
+
+            .sentenceBox {
+              .price {
+                font-size: 12px;
+                // font-size: 17px;
+              }
+
+              .product {
+                font-size: 12px;
+                // font-size: 17px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// 🟧🟧🟧🟧🟧（ここから1列表示に変わる）
+// @media screen and (max-width: 830px) {
+@media screen and (max-width: 768px) {
+  .body {
+    .barrel,
+    .bottle,
+    .cocktail {
+      .menuSection {
+        .menuItem {
+          width: 500px;
+          height: 400px;
+          // border: 5px solid red;
+          display: grid;
+          grid-template:
+            "about" 150px
+            "image" 200px
+            "button" 50px;
+
+          .aboutBox {
+            // border: 5px solid blue;
+            background-color: white;
+
+            .titleBox {
+              .title {
+                font-size: 18px;
+                height: 40px;
+                // border: 1px dashed black;
+                // font-size: 20px;
+              }
+            }
+
+            .sentenceBox {
+              .price {
+                font-size: 14px;
+                height: 20px;
+                // border: 1px dashed black;
+                // font-size: 17px;
+              }
+
+              .product {
+                font-size: 14px;
+                height: 90px;
+                // border: 1px dashed black;
+                // font-size: 17px;
+              }
+            }
+          }
+
+          .imageBox {
+            // border: 5px solid green;
+          }
+
+          .buttonBox {
+            // border: 5px solid orange;
+            a {
+              padding: 0.5rem 1rem;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// 680px
+// @media screen and (max-width: 680px) {
+//   .body {
+//     .barrel,
+//     .bottle,
+//     .cocktail {
+//       .menuSection {
+//         .menuItem {
+//           width: 500px;
+//           // width: calc(100% - 4rem);
+//           border: 5px solid red;
+//           // margin: 1rem 3rem;
+
+//           .aboutBox {
+//             border: 5px solid blue;
+//             background-color: white;
+
+//             .titleBox {
+//               .title {
+//                 font-size: 18px;
+//                 // font-size: 20px;
+//               }
+//             }
+
+//             .sentenceBox {
+//               .price {
+//                 font-size: 15px;
+//                 // font-size: 17px;
+//               }
+
+//               .product {
+//                 font-size: 15px;
+//                 // font-size: 17px;
+//               }
+//             }
+//           }
+//         }
+//       }
+//     }
+//   }
 // }
 
-// .section {
-//   border: 3px solid red;
-//   padding: 1rem;
-//   display: flex;
-//   justify-content: center;
-//   align-items: start;
-//   flex-direction: row;
-//   flex-wrap: wrap;
-// }
+// 💎💎💎💎💎
+@media screen and (max-width: 600px) {
+  .body {
+    .barrel,
+    .bottle,
+    .cocktail {
+      .menuSection {
+        .menuItem {
+          width: 400px;
+          height: 450px;
+          // border: 5px solid red;
+          display: grid;
+          grid-template:
+            "about" 170px
+            "image" 200px
+            "button" 80px;
 
-// .box {
-//   border: 3px solid orange;
-//   padding: 1rem;
-//   display: flex;
-//   flex-direction: column;
-//   height: 350px;
-//   width: 33%;
-// }
+          .aboutBox {
+            // border: 5px solid blue;
+            // background-color: white;
 
-// .about {
-//   border: 3px solid rgb(1, 249, 142);
-//   display: flex;
-//   justify-content: center;
-//   align-items: start;
-//   flex-direction: column;
-// }
+            .titleBox {
+              .title {
+                font-size: 20px;
+                height: 60px;
+                border: none;
+                // border: 1px dashed black;
+                // font-size: 20px;
+              }
+            }
 
-// .image {
-//   object-fit: contain;
-// }
+            .sentenceBox {
+              .price {
+                font-size: 14px;
+                height: 20px;
+                border: none;
+                // border: 1px dashed black;
+                // font-size: 17px;
+              }
+
+              .product {
+                font-size: 14px;
+                height: 90px;
+                border: none;
+                // border: 1px dashed black;
+                // font-size: 17px;
+              }
+            }
+          }
+
+          .imageBox {
+            // border: 5px solid green;
+            border: none;
+          }
+
+          .buttonBox {
+            // border: 5px solid orange;
+            a {
+              padding: 0.5rem 1rem;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+// 💗💗💗💗💗
+@media screen and (max-width: 480px) {
+  .body {
+    .barrel,
+    .bottle,
+    .cocktail {
+      .menuSection {
+        .menuItem {
+          width: calc(100% - 4rem);
+          .aboutBox {
+            .titleBox {
+              .title {
+                font-size: 15px;
+                height: 40px;
+                border: none;
+                // border: 1px dashed black;
+              }
+            }
+
+            .sentenceBox {
+              .price {
+                font-size: 12px;
+                height: 20px;
+                border: none;
+                // border: 1px dashed black;
+              }
+
+              .product {
+                font-size: 11px;
+                height: 90px;
+                border: none;
+                // border: 1px dashed black;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
